[NguyenDanHuy_20.05.2025] feat: add payment for payOs, and update  flag address, gender for register, create, update user
